--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -52,23 +52,32 @@
    "metadata": {},
    "source": [
     "## Calculating Quintic Bezier Curve Control Points\n",
-    "A quintic Bezier path requires 6 control points. It has the key advantage that the curvature or likewise the second derivative may be manipulated at the start and endpoints to obtain a curvature continuous path. The offset expresses the distance from each endpoint to middle control points as a fraction of the segment length. The method implemented to derive the 6 control points from a position, heading and second derivative vector at the start and endpoints are described in this paper:\n",
+    "A quintic Bezier path requires 6 control points. It has the key advantage that the curvature or likewise the second derivative may be manipulated at the start and endpoints to obtain a curvature continuous path. The offset expresses the distance from each endpoint to middle control points as a fraction of the segment length. The method implemented to derive the 6 control points from a position, first and second derivative vector at the start and endpoints are described in this paper:\n",
     "http://www2.informatik.uni-freiburg.de/~lau/students/Sprunk2008.pdf\n",
     "\n",
-    "![](figures/quintic_points.png)\n",
-    "![](figures/control_point_calc.png)"
+    "$$\n",
+    "\\begin{array}{ll}\n",
+    "P_{1}=\\frac{1}{5} t_{s}+P_{0}\\\\\n",
+    "P_{4}=P_{5}-\\frac{1}{5} t_{e}\\\\\n",
+    "P_{2}=\\frac{1}{20} a_{s}+2 P_{1}-P_{0}\\\\\n",
+    "P_{3}=\\frac{1}{20} a_{e}+2 P_{4}-P_{5} .\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "![](figures/quintic_points.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "#Creating quintic bezier path controlling position, first, second derivative at start and end points\n",
     "def calc_5ord_bezier_path(sx, sy, sd, sdd, ex, ey, ed, edd, offset_1, offset_2):\n",
+    "    \"\"\" Create quintic bezier path by manipulating position, first derivative, second \n",
+    "    derivative vectors at the start and endpoints \"\"\"\n",
     "\n",
     "    sd = np.multiply(sd, 0.2*offset_1)\n",
     "    sdd = np.multiply(sdd, 0.05)\n",
@@ -107,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -121,7 +130,7 @@
     "        self.waypoints = Path(ax, ay, ayaw, k)\n",
     "\n",
     "        self.wheelbase = 2.5\n",
-    "        self.max_steer = 0.95\n",
+    "        self.max_steer = 0.3\n",
     "        \n",
     "        # defines and sets left and right boundary lines\n",
     "        self.bound = bound\n",
@@ -141,7 +150,7 @@
     "        self.optimized_path = Path([], [], [], [])\n",
     "        self.ctr_points = Path(ctr_pt_x, ctr_pt_y, [], [])\n",
     "\n",
-    "    # Calculates the first derivative of input arrays\n",
+    "    # calculates first derivative of input arrays\n",
     "    def calc_d(self, x, y):\n",
     "\n",
     "        dx, dy = [], []\n",
@@ -206,14 +215,22 @@
     "The heading is formed as the normal to the bisector of the angle formed at each waypoint. The target heading at the start and end waypoint are fixed as is. The first derivative vector is obtained from the target heading and the less of the distances to the next or previous waypoint.\n",
     "https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf\n",
     "\n",
-    "![](figures/bisector.png)  \n",
-    "![](figures/tan_length.png)  \n",
-    "![](figures/first_der.png)\n"
+    "$$\n",
+    "\\begin{array}{l}\n",
+    "\\alpha_{i}=\\angle p_{i-1} p_{i}+\\frac{\\angle p_{i} p_{i+1}-\\angle p_{i-1} p_{i}}{2} \\\\\n",
+    "l_{i}=\\min \\left(\\left\\|p_{i-1}-p_{i}\\right\\|,\\left\\|p_{i}-p_{i+1}\\right\\|\\right) \\\\\n",
+    "p_{i}^{\\prime}=l_{i} *\\left[\\begin{array}{c}\n",
+    "\\cos \\left(\\alpha_{i}\\right) \\\\\n",
+    "\\sin \\left(\\alpha_{i}\\right)\n",
+    "\\end{array}\\right]\n",
+    "\\end{array}\n",
+    "$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
+   "id": "30255d2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,9 +242,13 @@
     "        n_points = len(ax)\n",
     "        dx, dy = [], []\n",
     "\n",
+    "        dyaw, k = self.calc_yaw_curvature(ax, ay)\n",
+    "        ayaw = dyaw.copy()\n",
+    "        for n in range(1, len(ax)-1):\n",
+    "            ayaw[n] = 0.5*(dyaw[n] + dyaw[n-1])\n",
+    "\n",
     "        for n in range(n_points):\n",
     "\n",
-    "            \n",
     "            if n == 0:\n",
     "                dist = np.hypot( (ax[n+1] - ax[n]), (ay[n+1] - ay[n]) )\n",
     "            elif n == n_points-1:\n",
@@ -240,28 +261,39 @@
     "                d1 = np.hypot( (ax[n+1] - ax[n]), (ay[n+1] - ay[n]) )\n",
     "                dist = min(d0, d1)\n",
     "\n",
-    "            dx.append(dist * np.cos(self.waypoints.yaw[n]))\n",
-    "            dy.append(dist * np.sin(self.waypoints.yaw[n]))\n",
+    "            dx.append(dist * np.cos(ayaw[n]))\n",
+    "            dy.append(dist * np.sin(ayaw[n]))\n",
     "\n",
     "        return dx, dy"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2bbd99a",
+   "metadata": {},
    "source": [
     "## Determining Second Derivative Vector\n",
-    "The heading is formed as the normal to the bisector of the angle formed at each waypoint. The target heading at the start and end waypoint are fixed as is. The first derivative vector is obtained from the target heading and the less of the distances to the next or previous waypoint.  http://www2.informatik.uni-freiburg.de/~lau/students/Sprunk2008.pdf\n",
+    "The second derivative vector, which equates to the curvature conditions at each waypoint is determined by first interpolating a set of cubic Bezier curves from the first derivative vector. This results in a curvature discontinuity, the weighted average of the endpoint second derivative conditions is taken to determine the second derivative vector at the waypoint.\n",
+    "http://www2.informatik.uni-freiburg.de/~lau/students/Sprunk2008.pdf\n",
     "\n",
-    "![](figures/heuristic.png)  \n",
-    "![](figures/2nd_der.png)\n",
-    "![](figures/weighted_avg.png)\n",
-    "![](figures/weights.png)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "![](figures/heuristic.png) \n",
+    "\n",
+    "Based on the first derivative vectors obtained at each waypoint, the start and endpoint second derivative vectors for consecutive cubic Bezier curve may be described as follows\n",
+    "$$\n",
+    "S_{A B}^{\\prime \\prime}(1)=6\\left(\\left(A+\\frac{1}{3} t_{A}\\right)-2\\left(B-\\frac{1}{3} t_{B}\\right)+B\\right)=6 A+2 t_{A}+4 t_{B}-6 B \\\\\n",
+    "S_{B C}^{\\prime \\prime}(0)=6\\left(B-2\\left(B+\\frac{1}{3} t_{B}\\right)+\\left(C-\\frac{1}{3} t_{C}\\right)\\right)=-6 B-4 t_{B}-2 t_{C}+6 C \\\\\n",
+    "$$\n",
+    "Based on the length of the previous and next segment, a weighted average is taken of the endpoint curvatures as follow &nbsp;\n",
+    "$$\n",
+    "a=\\alpha S_{A B}^{\\prime \\prime}(1)+\\beta S_{B C}^{\\prime \\prime}(0)=\\alpha\\left(6 A+2 t_{A}+4 t_{B}-6 B\\right)+\\beta\\left(-6 B-4 t_{B}-2 t_{C}+6 C\\right),\\\\\n",
+    "\\alpha=\\frac{d_{B C}}{d_{A B}+d_{B C}} \\quad \\beta=\\frac{d_{A B}}{d_{A B}+d_{B C}}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
+   "id": "66e39c65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,18 +350,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a65bc7d",
+   "metadata": {},
    "source": [
     "## Fitting Quintic Bezier Curves in Each Segment\n",
     "The first and second derivative conditions at each waypoint are determined as vectors with magnitude varying with segment length. Then, a single quintic bezier curve is fit into each segment within these conditions.\n",
     "\n",
     "![](figures/segments.png)"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -364,8 +397,7 @@
     "            for p in points:\n",
     "                ctr_pt_x.append( p[0] )\n",
     "                ctr_pt_y.append( p[1] )\n",
-    "\n",
-    "        return cx, cy, ctr_pt_x, ctr_pt_y"
+    "        return cx, cy, ctr_pt_x, ctr_pt_y\n"
    ]
   },
   {
@@ -373,24 +405,56 @@
    "id": "c9731579",
    "metadata": {},
    "source": [
-    "## Cost Function\n",
+    "## Approach 1: Optimizing Execution Time with Steering constraints\n",
+    "The original paper proposed the following cost function, intending to miinimize the execution time while being able to abide by the lateral offset and maximum steering angle constraints. The constraints are imposed by a cost which returns an exponentially greater value when greater than the limit.\n",
+    "$$\n",
+    "E=t+\\sum_{j=1}^{n}\\left(\\text { penalty }\\left(\\frac{\\left\\|\\varphi_{j}\\right\\|}{\\varphi_{\\max }}\\right)+\\text { penalty }\\left(\\frac{\\left\\|d_{j}\\right\\|}{d_{\\max }}\\right)\\right)\n",
+    "$$\n",
+    "$$\n",
+    "\\text { penalty }(c)=\\exp (25 \\cdot(c-0.9))\n",
+    "$$\n",
+    "The steering profile throughout the path is approximated from the vehicle wheelbase and the curvature at each point.\n",
+    "$$\n",
+    "\\varphi_{j}=\\arctan \\left(l_{\\text {vehicle }} \\cdot k_{j}\\right)\n",
+    "$$\n",
     "\n",
-    "The optimization strategy is essentially to minimize curvature and variation in curvature throughout the entirety of the path\n",
-    "\n",
-    "![](figures/cost_func.png)"
+    "## Approach 2: Optimizing Minimum Curvature and Curvature Continuity\n",
+    "The second approach intends to minimize curvature and curvature continuity. This objective function allowed the program to much quickly find a solution, with only a boundary constraint.\n",
+    "$$\n",
+    "J_{i}=\\int_{t_{i-1}}^{t_{i}}\\left[a_{i}\\left|\\kappa_{i}(t)\\right|^{2}+b_{i}\\left|\\dot{\\kappa_{i}}(t)\\right|^{2}\\right] d t\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Spline(Spline):\n",
     "\n",
-    "    # Objective function for quintic bezier\n",
+    "    \n",
+    "    def deviation_penalty(self, dev, max_dev):\n",
+    "        \"\"\" Penalty to return exponential cost when deviation is greater than maximum \"\"\"\n",
+    "        dev = np.array(dev)\n",
+    "        dev = np.absolute(dev) / max_dev\n",
+    "        penalty = np.exp( 25 * (dev - 0.9) )\n",
+    "        return np.sum(penalty)\n",
+    "\n",
+    "   \n",
+    "    def steering_penalty(self, k, max_steer):\n",
+    "        \"\"\" Penalty to calculating steering angle profile throughout path, returns\n",
+    "        exponential cost when greater than vehicle limits\"\"\"\n",
+    "        k = np.array(k)\n",
+    "        steer_profile  = np.arctan(self.wheelbase * k)\n",
+    "        steer_cons_ratio = np.absolute(steer_profile) / max_steer\n",
+    "        penalty = np.exp( 25 * (steer_cons_ratio - 0.9) )\n",
+    "        return np.sum(penalty)\n",
+    "\n",
     "    def quintic_objective_func(self, params):\n",
+    "        \"\"\" Objective function for interpolating piecewise quintic bezier path \"\"\"\n",
     "\n",
     "        ax = self.waypoints.x.copy()\n",
     "        ay = self.waypoints.y.copy()\n",
@@ -407,6 +471,10 @@
     "        bx, by, _, _ = self.quintic_bezier_path(ax, ay, offset)\n",
     "        yaw, k = self.calc_yaw_curvature(bx, by)\n",
     "\n",
+    "        # constraints\n",
+    "        steering_constraint = self.steering_penalty(k, self.max_steer)\n",
+    "        deviation_constraint = self.deviation_penalty(deviation_lat, self.bound)\n",
+    "\n",
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
     "        absolute_dk = np.square(dk)\n",
@@ -416,35 +484,21 @@
     "        absolute_k = np.square(k)\n",
     "        curvature_cost = 1 * np.mean(absolute_k)\n",
     "\n",
-    "        return continuity_cost + curvature_cost\n",
-    "\n",
-    "    # penalty to return exponential cost when greater than 1\n",
-    "    def deviation_penalty(self, dev, max_dev):\n",
-    "\n",
-    "        dev = np.array(dev)\n",
-    "        dev = np.absolute(dev) / max_dev\n",
-    "        penalty = np.exp( 25 * (dev - 0.9) )\n",
-    "        return np.sum(penalty)\n",
-    "\n",
-    "    # penalty to return exponential cost when greater than 1\n",
-    "    def steering_penalty(self, k, max_steer):\n",
-    "\n",
-    "        k = np.array(k)\n",
-    "        steer_profile  = np.arctan(self.wheelbase * k)\n",
-    "        steer_cons_ratio = np.divide( np.absolute(steer_profile) , max_steer )\n",
-    "        penalty = np.exp( 25 * (steer_cons_ratio - 0.9) )"
+    "        return 0.01*self.calc_path_dist(bx, by) + continuity_cost + 0.001*deviation_constraint + steering_constraint"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff78247c",
+   "metadata": {},
    "source": [
     "## Parallel Optimization"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
+   "id": "e665cd95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +512,7 @@
     "        # create bounds for waypoint deviation and tangent length\n",
     "        bnds = []\n",
     "        for n in range(len(self.waypoints.yaw)-2):\n",
-    "            bnds.append((-self.bound, self.bound))\n",
+    "            bnds.append((-1.5*self.bound, 1.5*self.bound))\n",
     "        for n in range(len(self.waypoints.yaw)):\n",
     "            bnds.append((0, 1.3))\n",
     "        bnds = tuple(bnds)\n",
@@ -505,19 +559,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
+   "id": "8a05239b",
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 77.9 ms, sys: 0 ns, total: 77.9 ms\n",
-      "Wall time: 76.7 ms\n",
+      "CPU times: user 89.9 ms, sys: 246 µs, total: 90.2 ms\n",
+      "Wall time: 89 ms\n",
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 1.46 s, sys: 62.2 ms, total: 1.52 s\n",
-      "Wall time: 8.66 s\n"
+      "CPU times: user 10.1 s, sys: 109 ms, total: 10.3 s\n",
+      "Wall time: 34.5 s\n"
      ]
     },
     {
@@ -527,7 +582,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "8849da4aab734036ba7a19d8485ba7a6"
+       "model_id": "ac48cf6f1f4b4d8c8956247153e9625f"
       }
      },
      "metadata": {}
@@ -539,7 +594,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "87a84bf2d7694b2a86b9e0f3ec73ac38"
+       "model_id": "da35ff19f88341d0b5d42cb08f196dda"
       }
      },
      "metadata": {}
@@ -551,7 +606,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "ba23df8158f442e28408c04aae364f41"
+       "model_id": "1dd6553ff36e4d0491b2532d5eeac069"
       }
      },
      "metadata": {}
@@ -559,11 +614,14 @@
    ],
    "source": [
     "    # define input path\n",
-    "    ay = [0.0, 2.3, 6.25, 8.6, 8.2, 5.3, 2.6]\n",
+    "    ay = [0.0, 2.3, 5.25, 8.6, 8.2, 5.3, 2.6]\n",
     "    ax = [0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4]\n",
-    "    boundary = 1.0\n",
+    "    boundary = 4.0\n",
     "\n",
+    "    ay = [0, 20, 40, 54.7, 57, 54.7, 40, 20]\n",
+    "    ax = [-17, -17, -17 , -8.5, 0, 8.5, 25, 40]\n",
     "    %time spline = Spline(ax, ay, boundary)\n",
+    "\n",
     "    %time spline.optimize_min_quintic()\n",
     "\n",
     "    # Path plot\n",
@@ -601,7 +659,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
+   "id": "3a0fd028",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +670,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "be4fe7ded9c8470297d225cd9c7714e0"
+       "model_id": "8ad19a7e66a7448388879c504e114c0e"
       }
      },
      "metadata": {}
