--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 82,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 83,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 84,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 85,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -217,6 +217,7 @@
     "        plt.plot(spline.waypoints.x, spline.waypoints.y, '.', label=\"waypoints\")\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
+    "        plt.title(\"Path\")\n",
     "        plt.axis(\"equal\")\n",
     "\n",
     "        # Heading plot\n",
@@ -225,6 +226,7 @@
     "        plt.plot([np.rad2deg(iyaw) for iyaw in spline.optimized_path.yaw], \"-m\", label=\"optimized\")\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
+    "        plt.title(\"Heading\")\n",
     "        plt.xlabel(\"line length[m]\")\n",
     "        plt.ylabel(\"yaw angle[deg]\")\n",
     "\n",
@@ -234,6 +236,7 @@
     "        plt.plot(spline.optimized_path.k, \"-m\", label=\"optimized\")\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
+    "        plt.title(\"Curvature\")\n",
     "        plt.xlabel(\"line length[m]\")\n",
     "        plt.ylabel(\"curvature [1/m]\")\n",
     "\n",
@@ -244,7 +247,7 @@
     "        plt.plot(opt_jerk[:-5], \"-m\", label=\"optimized\")\n",
     "        plt.grid(True)\n",
     "        plt.legend()\n",
-    "        plt.title(\"Lateral Jerk Profile\")\n",
+    "        plt.title(\"Curvature Rate\")\n",
     "        plt.xlabel(\"line length[m]\")\n",
     "        plt.show()\n",
     "\n",
@@ -252,29 +255,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "66759407",
-   "metadata": {},
-   "source": [
-    "## Determining First Derivative Vector\n",
-    "The heading is formed as the normal to the bisector of the angle formed at each waypoint. The target heading at the start and end waypoint are fixed as is. The first derivative vector is obtained from the target heading and the less of the distances to the next or previous waypoint.\n",
-    "https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf  \n",
-    "\n",
-    "$$\n",
-    "\\begin{array}{l}\n",
-    "\\alpha_{i}=\\angle p_{i-1} p_{i}+\\frac{\\angle p_{i} p_{i+1}-\\angle p_{i-1} p_{i}}{2} \\\\\n",
-    "l_{i}=\\min \\left(\\left\\|p_{i-1}-p_{i}\\right\\|,\\left\\|p_{i}-p_{i+1}\\right\\|\\right) \\\\\n",
-    "p_{i}^{\\prime}=l_{i} *\\left[\\begin{array}{c}\n",
-    "\\cos \\left(\\alpha_{i}\\right) \\\\\n",
-    "\\sin \\left(\\alpha_{i}\\right)\n",
-    "\\end{array}\\right]\n",
-    "\\end{array}\n",
-    "$$\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -306,8 +288,8 @@
     "                d1 = np.hypot( (ax[n+1] - ax[n]), (ay[n+1] - ay[n]) )\n",
     "                dist = min(d0, d1)\n",
     "\n",
-    "            dx.append(dist * np.cos(self.waypoints.yaw[n]))\n",
-    "            dy.append(dist * np.sin(self.waypoints.yaw[n]))\n",
+    "            dx.append(dist * np.cos(ayaw[n]))\n",
+    "            dy.append(dist * np.sin(ayaw[n]))\n",
     "\n",
     "        return dx, dy"
    ]
@@ -337,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -407,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 88,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -452,14 +434,14 @@
    "metadata": {},
    "source": [
     "## Approach 1: Optimizing Execution Time with Steering constraints\n",
-    "The original paper proposed the following cost function, intending to miinimize the execution time while being able to abide by the lateral offset and maximum steering angle constraints. The constraints are imposed by a cost which returns an exponentially greater value when greater than the limit.\n",
+    "The original paper proposed the following cost function, intending to miinimize the execution time $t$ while being able to abide by the lateral offset $d_{\\max }$ and maximum steering angle $\\varphi_{\\max }$ constraints. The constraints are imposed by a cost which returns an exponentially greater value when greater than the limit.\n",
     "$$\n",
     "E=t+\\sum_{j=1}^{n}\\left(\\text { penalty }\\left(\\frac{\\left\\|\\varphi_{j}\\right\\|}{\\varphi_{\\max }}\\right)+\\text { penalty }\\left(\\frac{\\left\\|d_{j}\\right\\|}{d_{\\max }}\\right)\\right)\n",
     "$$\n",
     "$$\n",
     "\\text { penalty }(c)=\\exp (25 \\cdot(c-0.9))\n",
     "$$\n",
-    "The steering profile throughout the path is approximated from the vehicle wheelbase and the curvature at each point.\n",
+    "The steering profile throughout the path is approximated from the vehicle wheelbase $l_\\text {vehicle }$ and the curvature $k_{j}$ at each point.\n",
     "$$\n",
     "\\varphi_{j}=\\arctan \\left(l_{\\text {vehicle }} \\cdot k_{j}\\right)\n",
     "$$\n"
@@ -467,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -612,13 +594,13 @@
     "        # cost of curvature continuity\n",
     "        dk, _ = self.calc_d(k, k)\n",
     "        absolute_dk = np.square(dk)\n",
-    "        continuity_cost = 40 * np.mean(absolute_dk)  \n",
+    "        continuity_cost = 40.0 * np.mean(absolute_dk)  \n",
     "\n",
     "        # curvature cost\n",
     "        absolute_k = np.square(k)\n",
-    "        curvature_cost = 1 * np.mean(absolute_k)\n",
+    "        curvature_cost = 1.0 * np.mean(absolute_k)\n",
     "\n",
-    "        return continuity_cost + curvature_cost\n",
+    "        return curvature_cost\n",
     "\n",
     "    def optimize_min_quintic_2(self):\n",
     "        \"\"\" Minimize quintic objective function using SciPy solver \"\"\"\n",
@@ -674,7 +656,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 20,
+   "execution_count": 90,
    "outputs": []
   },
   {
@@ -686,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 91,
    "id": "8a05239b",
    "metadata": {},
    "outputs": [
@@ -696,8 +678,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 1.98 s, sys: 67.4 ms, total: 2.04 s\n",
-      "Wall time: 8.28 s\n"
+      "CPU times: user 1.96 s, sys: 120 ms, total: 2.08 s\n",
+      "Wall time: 8.14 s\n"
      ]
     },
     {
@@ -707,7 +689,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "b976918c7cf34541add713711f47f7f8"
+       "model_id": "946ac06e11ed4da0b3de89e56c48ea9d"
       }
      },
      "metadata": {}
@@ -719,7 +701,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "a4d5fe4a07234d1981db197f63a4e3cb"
+       "model_id": "744d14f260044bf699754745661fd8f1"
       }
      },
      "metadata": {}
@@ -731,7 +713,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "03411b3943a044aeab737e35a761bf40"
+       "model_id": "5a62db998c184975935dd02b79a3ad5d"
       }
      },
      "metadata": {}
@@ -743,61 +725,21 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fc8c904d294a432db8cfd2094aef5e48"
+       "model_id": "6e2f731262f84ad5b3bfd17be9593416"
       }
      },
      "metadata": {}
     }
    ],
    "source": [
-    "    # define input path\n",
-    "    boundary = 2.0\n",
-    "    ay = np.array([0.0, 2.3, 5.25, 8.6, 8.2, 5.3, 2.6])\n",
-    "    ay = -1*ay\n",
-    "    ax = [0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4]\n",
-    "    \n",
-    "    spline = Spline(ax, ay, boundary)\n",
-    "    %time spline.optimize_min_quintic_2()\n",
-    "    spline.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # # define input path\n",
-    "    # boundary = 4.0\n",
-    "    # ay = np.array([0.0, 2.3, 5.25, 8.6, 8.2, 5.3, 2.6])\n",
-    "    # ax = [0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4]\n",
-    "    \n",
-    "    # spline = Spline(ax, ay, boundary)\n",
-    "    # %time spline.optimize_min_quintic_2()\n",
-    "    # # spline.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%time spline.optimize_min_quintic_1()\n",
+    "# define input path\n",
+    "boundary = 2.0\n",
+    "ay = np.array([0.0, 2.3, 5.25, 8.6, 8.2, 5.3, 2.6])\n",
+    "ax = np.array([0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4])\n",
+    "\n",
+    "spline = Spline(ax, ay, boundary)\n",
+    "%time spline.optimize_min_quintic_2()\n",
     "spline.visualize()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3a0fd028",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # define input path\n",
-    "    boundary = 4.0\n",
-    "    ay = [0, 20, 40, 54.7, 57, 54.7, 40, 20]\n",
-    "    ax = [-17, -17, -17 , -8.5, 0, 8.5, 25, 40]"
    ]
   }
  ],
