--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "id": "5de66751",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "51d687fc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "5311cf76",
    "metadata": {},
    "outputs": [],
@@ -116,22 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Spline():\n",
     "\n",
-    "    def __init__(self, ax, ay, bound):\n",
+    "    def __init__(self, ax, ay, bound, wheelbase=2.5, max_steer=0.95, max_curvature=5.0):\n",
     "        \n",
     "        #input waypoint coordinates\n",
     "        ayaw, k = self.calc_yaw_curvature(ax, ay)\n",
     "        self.waypoints = Path(ax, ay, ayaw, k)\n",
     "\n",
-    "        self.wheelbase = 2.5\n",
-    "        self.max_steer = 0.3\n",
-    "        self.max_lateral_acceleration = 10.0\n",
+    "        self.wheelbase = wheelbase\n",
+    "        self.max_steer = max_steer\n",
+    "        self.max_curvature = max_curvature\n",
     "        \n",
     "        # defines and sets left and right boundary lines\n",
     "        self.bound = bound\n",
@@ -203,8 +203,17 @@
     "            rax.append(self.waypoints.x[n] + self.bound*np.sin(self.waypoints.yaw[n]))\n",
     "            ray.append(self.waypoints.y[n] - self.bound*np.cos(self.waypoints.yaw[n]))\n",
     "        \n",
-    "        return lax, lay, rax, ray\n",
-    "\n",
+    "        return lax, lay, rax, ray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Spline(Spline):\n",
+    "    \n",
     "    def visualize(self):\n",
     "        \"\"\" Function to visualize present output \"\"\"\n",
     "\n",
@@ -256,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "id": "30255d2c",
    "metadata": {},
    "outputs": [],
@@ -319,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "id": "66e39c65",
    "metadata": {},
    "outputs": [],
@@ -389,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "id": "b47c439f",
    "metadata": {},
    "outputs": [],
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "id": "a17b92b9",
    "metadata": {},
    "outputs": [],
@@ -564,7 +573,9 @@
     "The second approach intends to minimize curvature and curvature continuity. This objective function allowed the program to much quickly find a solution, with only a boundary constraint.\n",
     "$$\n",
     "J_{i}=\\int_{t_{i-1}}^{t_{i}}\\left[a_{i}\\left|\\kappa_{i}(t)\\right|^{2}+b_{i}\\left|\\dot{\\kappa_{i}}(t)\\right|^{2}\\right] d t\n",
-    "$$\n"
+    "$$\n",
+    "\n",
+    "This method may be incorperated with a curvature constraint using a user defined SciPy inequality constraint, at the cost of significantly poorer computation time."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -602,7 +613,7 @@
     "\n",
     "        return curvature_cost\n",
     "\n",
-    "    def optimize_min_quintic_2(self):\n",
+    "    def optimize_min_quintic_2(self, constrained=False):\n",
     "        \"\"\" Minimize quintic objective function using SciPy solver \"\"\"\n",
     "        \n",
     "        print(\"Attempting optimization minima\")\n",
@@ -622,8 +633,13 @@
     "        for n in range(len(self.waypoints.yaw)):\n",
     "            initial_guess.append(0.2)\n",
     "\n",
-    "        result = minimize_parallel(self.quintic_objective_func_2, initial_guess, bounds=bnds)\n",
-    "        # result = optimize.minimize(self.quintic_objective_func, initial_guess, bounds=bnds)\n",
+    "        if constrained:\n",
+    "            max_curvature = {'type': 'ineq', 'fun': self.max_curvature_constraint}\n",
+    "            constraints = [max_curvature]\n",
+    "            result = optimize.minimize(self.quintic_objective_func_2, initial_guess, bounds=bnds, constraints=constraints)\n",
+    "        else:\n",
+    "            result = minimize_parallel(self.quintic_objective_func_2, initial_guess, bounds=bnds)\n",
+    "\n",
     "\n",
     "        ax = self.waypoints.x.copy()\n",
     "        ay = self.waypoints.y.copy()\n",
@@ -652,11 +668,33 @@
     "\n",
     "        else:\n",
     "            print(\"optimization failure, defaulting\")\n",
-    "            exit()"
+    "            exit()\n",
+    "\n",
+    "    def max_curvature_constraint(self, params):\n",
+    "        \"\"\" Optional method to impose curvature constraint using SciPy \"\"\"\n",
+    "\n",
+    "        ax = self.waypoints.x.copy()\n",
+    "        ay = self.waypoints.y.copy()\n",
+    "\n",
+    "        # calculate offsets and input waypoints\n",
+    "        waypoints = len(self.waypoints.yaw)\n",
+    "        deviation_lat = params[ :(waypoints-2) ]\n",
+    "        offset = params[ (waypoints-2): ]\n",
+    "\n",
+    "        for n in range(0, len(self.waypoints.yaw)-2):\n",
+    "            ax[n+1] -= deviation_lat[n]*np.sin(self.waypoints.yaw[n+1])\n",
+    "            ay[n+1] += deviation_lat[n]*np.cos(self.waypoints.yaw[n+1])\n",
+    "        \n",
+    "        bx, by, _, _ = self.quintic_bezier_path(ax, ay, offset)\n",
+    "        yaw, k = self.calc_yaw_curvature(bx, by)\n",
+    "        abs_k = np.absolute(k)\n",
+    "        max_k = np.max(abs_k)\n",
+    "\n",
+    "        return self.max_curvature - max_k"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 90,
+   "execution_count": 13,
    "outputs": []
   },
   {
@@ -668,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "id": "8a05239b",
    "metadata": {},
    "outputs": [
@@ -678,8 +716,8 @@
      "text": [
       "Attempting optimization minima\n",
       "optimized true\n",
-      "CPU times: user 1.96 s, sys: 120 ms, total: 2.08 s\n",
-      "Wall time: 8.14 s\n"
+      "CPU times: user 5.63 s, sys: 216 ms, total: 5.85 s\n",
+      "Wall time: 20.6 s\n"
      ]
     },
     {
@@ -689,7 +727,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "946ac06e11ed4da0b3de89e56c48ea9d"
+       "model_id": "50a352a40ff14487b3ec4fc602f21934"
       }
      },
      "metadata": {}
@@ -701,7 +739,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "744d14f260044bf699754745661fd8f1"
+       "model_id": "5a6b6cee921b4c0091cb440175b266d8"
       }
      },
      "metadata": {}
@@ -713,7 +751,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5a62db998c184975935dd02b79a3ad5d"
+       "model_id": "79c7e2ec92dd484e93eb6ffd0561d776"
       }
      },
      "metadata": {}
@@ -725,7 +763,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6e2f731262f84ad5b3bfd17be9593416"
+       "model_id": "78cf0a8a15f44e779b1f07a2b0773a7d"
       }
      },
      "metadata": {}
@@ -734,11 +772,81 @@
    "source": [
     "# define input path\n",
     "boundary = 2.0\n",
-    "ay = np.array([0.0, 2.3, 5.25, 8.6, 8.2, 5.3, 2.6])\n",
+    "ay = np.array([-2.0, 2.3, 5.25, 8.6, 8.2, 5.3, -2.6])\n",
     "ax = np.array([0.0, 7.16, 13.68, 22.3, 30.64, 39.6, 50.4])\n",
     "\n",
     "spline = Spline(ax, ay, boundary)\n",
-    "%time spline.optimize_min_quintic_2()\n",
+    "%time spline.optimize_min_quintic_2(constrained=False)\n",
+    "spline.visualize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Attempting optimization minima\n",
+      "optimized true\n",
+      "CPU times: user 7min 39s, sys: 600 ms, total: 7min 40s\n",
+      "Wall time: 7min 40s\n"
+     ]
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "f1fdc723ca5a4274bd93c738b7549b11"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "4bbafde8ccf24cbfbb1813e2263504e5"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "6edefa5a47fa4becb0b0c040f7e89f76"
+      }
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "50bbc505046443e1b35bee7b83facc1d"
+      }
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "spline.max_curvature = 0.034\n",
+    "%time spline.optimize_min_quintic_2(constrained=True)\n",
     "spline.visualize()"
    ]
   }
