restore derivatve exp

--- a/main.ipynb
+++ b/main.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "4f493601",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,10 +258,31 @@
     "        plt.legend()\n",
     "        plt.title(\"Curvature Rate\")\n",
     "        plt.xlabel(\"line length[m]\")\n",
+    "        plt.ylabel(\"curvature rate\")\n",
     "        plt.show()\n",
     "\n",
     "        plt.show()"
    ]
+  },
+  {
+   "source": [
+    "## Determining First Derivative Vector\n",
+    "The heading is formed as the normal to the bisector of the angle formed at each waypoint. The target heading at the start and end waypoint are fixed as is. The first derivative vector is obtained from the target heading and the less of the distances to the next or previous waypoint.\n",
+    "https://users.soe.ucsc.edu/~elkaim/Documents/camera_WCECS2008_IEEE_ICIAR_58.pdf  \n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{l}\n",
+    "\\alpha_{i}=\\angle p_{i-1} p_{i}+\\frac{\\angle p_{i} p_{i+1}-\\angle p_{i-1} p_{i}}{2} \\\\\n",
+    "l_{i}=\\min \\left(\\left\\|p_{i-1}-p_{i}\\right\\|,\\left\\|p_{i}-p_{i+1}\\right\\|\\right) \\\\\n",
+    "p_{i}^{\\prime}=l_{i} *\\left[\\begin{array}{c}\n",
+    "\\cos \\left(\\alpha_{i}\\right) \\\\\n",
+    "\\sin \\left(\\alpha_{i}\\right)\n",
+    "\\end{array}\\right]\n",
+    "\\end{array}\n",
+    "$$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -849,6 +870,13 @@
     "%time spline.optimize_min_quintic_2(constrained=True)\n",
     "spline.visualize()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
